# VLN-CE-Docker

./: .gitignore  .gitmodules  README.md  setup_data.sh
docker/policy_server/: Dockerfile  README.md  compose.yml  entrypoint.sh  environment.yaml  pyproject.toml  setup_data.sh
docker/policy_server/vlnce_server/: __init__.py  base_adapter.py  cma_server.py  policy_server.py  seq2seq_server.py  waypoint_server.py
docker/policy_server/vlnce_server/adapters/: __init__.py  cma_adapter.py  seq2seq_adapter.py  waypoint_adapter.py
docker/policy_server/vlnce_server/transforms/: __init__.py  tokenizer.py
docker/vlnce/: Dockerfile  README.md  compose.yml  environment.yaml  protocol.md  pyproject.toml  setup_data.sh
docker/vlnce/vlnce_server/: __init__.py  example_policy_server.py  ws_eval_client.py
